--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://camsup.github.io/cam-portfolio/",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,19 +12,33 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@rainbow-me/rainbowkit": "^2.2.8",
     "@react-spring/web": "^10.0.1",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@studio-freight/lenis": "^1.0.42",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
+    "chart.js": "^4.4.1",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "three": "^0.178.0"
+    "spotify-web-api-node": "^5.0.2",
+    "three": "^0.178.0",
+    "viem": "^2.33.1",
+    "wagmi": "^2.16.0",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
