--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.3"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": ">=8.0.0"
   }
 }
