--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://camsup.github.io/cam-portfolio/",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist",
@@ -56,7 +56,7 @@
     "vite": "^7.0.3"
   },
   "engines": {
-    "node": "18.x",
+    "node": "22.x",
     "npm": ">=8.0.0"
   }
 }
