--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@studio-freight/lenis": "^1.0.42",
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "chart.js": "^4.4.1",
